--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
