--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.1.3"
+    "react-i18next": "^15.1.3",
+    "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
